2007-08-02  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestUtils.cs: Minor typo.
	* Test/TestDocumentTagTable.cs: Added a test to check the base number
	  of tags (115) in DocumentTagTable class
	* DocumentBufferArchiver.cs, DocumentTagTable.cs: IsDynamic method and
	  dynamic_tags member are now static.

2007-08-01  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestUtils.cs: Added unit test for TagEndsHere static method.

2007-07-31  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs: Minor whitespace change.
	* Test/TestUtils.cs, Monodoc.Editor.Gui.mdp: Added TestUtils.cs that is
	  a unit test for the helper classes in Utils.cs

2007-07-29  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs, Utils.cs: Removed local definition of
	  TagEndsHere and now it references it from DocumentUtils. Moved
	  definitions of AddString and AddNewline.
	* DocumentUndoManager.cs: Added Buffer accesor.

2007-07-29  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBuffer.cs: Minor Changes.

2007-07-24  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Utils.cs, Monodoc.Editor.Gui.mdp: Added Utils.cs this will contain
	  any helper classes for the other Document* classes.
	* DocumentBuffer.cs: Some minor changes, using methods from
	  DocumentUtils, and using conditionals for debug printings.

2007-07-23  Hector E. Gomez M. <hectoregm@gmail.com> 

	* DocumentBuffer.cs: Overrided OnInsertText default handler for
	  DocumentBuffer.

2007-07-21  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>

	* Monodoc.Editor.Gui/DocumentUndoManager.cs: Changed file name from
	  DocumentUndo.cs to DocumentUndoManager.cs
	* Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp: Added EditAction.cs and
	  DocumentUndo.cs source file.
	* Monodoc.Editor.Gui/EditAction.cs: Added interface EditAction that
	  establishes a contract for the mehtods any editing action that